fix brands bug on mobile view

--- a/src/components/brands.scss
+++ b/src/components/brands.scss
@@ -48,5 +48,11 @@
             }
         }
 
+        @media screen and (max-width:768px) {
+            .imgContainer:nth-child(odd){
+                align-self: center;
+            }   
+        }
+
     }
 }
